--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -19,6 +19,8 @@ body
   letter-spacing: -0.02em
 
 .site-header
+  position: sticky
+  top: 0
   background: $brown
   border-top: 0
   border-bottom: 0
@@ -49,6 +51,7 @@ body
 
 .hero
   background: $navy
+  height: 330px
   .wrapper
     max-width: 78%
     margin: 0 auto
@@ -65,6 +68,30 @@ body
       margin-top: -8px
       padding-bottom: 1.1em
       width: 65.5%
+
+.sub-menu
+  background: $navy
+  position: sticky
+  height: 50px
+  top: 76px
+  z-index: 100
+  ul
+    padding-top: 5px
+    margin-left: 206px
+    display: flex
+    list-style-type: none
+    flex-direction: row
+    gap: .75em
+    li
+      display: inline-block
+      justify-content: flex-start
+      padding: 0.25em .5em
+      a
+        color: $offwhite
+        opacity: .7
+        &:hover
+          text-decoration: none
+          opacity: 1
 
 h2
   font-family: $montaga
