--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -1,5 +1,3 @@
----
----
 @import minima
 @import fonts
 @import colors
@@ -41,7 +39,7 @@ body
           text-decoration: none
 
 
-.page-content
+.main-content, .page-content
   padding: 0
   .wrapper
     max-width: 100%
@@ -93,8 +91,17 @@ body
           text-decoration: none
           opacity: 1
 
+.sections
+  max-width: 78%
+  margin: 0 auto
+
 h2
   font-family: $montaga
+  font-size: 46px
+  line-height: 56px
+  font-weight: 400
+  letter-spacing: -0.03em
+  color: $navy
 
 footer
   background: $navy
