FAQ accordion done

--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,55 +1,77 @@
-  <div class="faq-question">
-    <p>Where is Elevated Tides located?</p>
-  </div>
-  <div class="faq-answer">
-    <p>We’re nestled on the Oregon shore of North Portland Harbor.</p>
-    <p>173 NE Bridgeton Rd<br>
-    Slip 26<br>
-    Portland, Oregon 97211</p>
-
-    <p><a href="https://g.co/kgs/Bhs8JLD">Google Maps</a></p>
-  </div>
-
-  <div class="faq-question">
-    <p>Do you have a map of the marina?</p>
-  </div>
-  <div class="faq-answer">
-    <img src="/assets/img/Elevated-Tides-Moorage-Map-pdf.jpg">
-    <p>Moorage tenant and guest parking in “Sailor Lots” only. Vehicles without a parking sticker or pass are subject to towing at the owner’s expense.</p>
+<div class="accordion">
+  <div>
+    <input id="faq-1" type="radio" name="faq">
+    <label for="faq-1">
+      <h3>Where is Elevated Tides located?</h3>
+    </label>
+    <div class="answer">
+      <p>We’re nestled on the Oregon shore of North Portland Harbor.</p>
+      <p>173 NE Bridgeton Rd<br>
+      Slip 26<br>
+      Portland, Oregon 97211</p>
+      <p><a href="https://g.co/kgs/Bhs8JLD">Google Maps</a></p>
+    </div>
   </div>
 
-  <div class="faq-question">
-    <p>What are the available slip sizes?</p>
+  <div>
+    <input id="faq-2" type="radio" name="faq">
+    <label for="faq-2">
+      <h3>Do you have a map of the marina?</h3>
+    </label>
+    <div class="answer">
+      <img src="/assets/img/Elevated-Tides-Moorage-Map-pdf.jpg">
+      <p>Moorage tenant and guest parking in “Sailor Lots” only. Vehicles without a parking sticker or pass are subject to towing at the owner’s expense.</p>
+    </div>
   </div>
-  <div class="faq-answer">
-    <p>We have 76 slips and side-tie berths that accommodate vessels up to 45 feet.</p>
+
+  <div>
+    <input id="faq-3" type="radio" name="faq">
+    <label for="faq-3">
+      <h3>What are the available slip sizes?</h3>
+    </label>
+    <div class="answer">
+      <p>We have 76 slips and side-tie berths that accommodate vessels up to 45 feet.</p>
+    </div>
   </div>
   
-  <div class="faq-question">
-    <p>What types of vessels can you accommodate?</p>
-  </div>
-  <div class="faq-answer">
-    <p>While sailboats make up the majority, we also welcome small powerboats, ski boats, fishing boats, cuddy cabins, kayaks, and canoes.</p>
-  </div>
-
-  <div class="faq-question">
-    <p>How many floating homes are in the marina?</p>
-  </div>
-  <div class="faq-answer">
-    <p>A scenic row of 14 floating homes lines the marina, adding to the charm and sense of community.</p>
+  <div>
+    <input id="faq-4" type="radio" name="faq">
+    <label for="faq-4">
+      <h3>What types of vessels can you accommodate?</h3>
+    </label>
+    <div class="answer">
+      <p>While sailboats make up the majority, we also welcome small powerboats, ski boats, fishing boats, cuddy cabins, kayaks, and canoes.</p>
+    </div>
   </div>
 
-  <div class="faq-question">
-    <p>Does the marina allow live-aboard or overnight tenants?</p>
-  </div>
-  <div class="faq-answer">
-    <p>We are unable to accommodate live-aboard or overnight tenants under any circumstances.</p>
+  <div>
+    <input id="faq-5" type="radio" name="faq">
+    <label for="faq-5">
+      <h3>How many floating homes are in the marina?</h3>
+    </label>
+    <div class="answer">
+      <p>A scenic row of 14 floating homes lines the marina, adding to the charm and sense of community.</p>
+    </div>
   </div>
 
-  <div class="faq-question">
-    <p>Do you have payment late fees?</p>
+  <div>
+    <input id="faq-6" type="radio" name="faq">
+    <label for="faq-6">
+      <h3>Does the marina allow live-aboard or overnight tenants?</h3>
+    </label>
+    <div class="answer">
+      <p>We are unable to accommodate live-aboard or overnight tenants under any circumstances.</p>
+    </div>
   </div>
-  <div class="faq-answer">
-    <p>We hate this one, we are boaters, not bankers, but…Rent is due on the 1st, and delinquent on the 10th.  Payments received after the 10th and checks not honored by the bank are subject to a $25 fee.</p>
+
+  <div>
+    <input id="faq-7" type="radio" name="faq">
+    <label for="faq-7">
+      <h3>Do you have payment late fees?</h3>
+    </label>
+    <div class="answer">
+      <p>We hate this one, we are boaters, not bankers, but…Rent is due on the 1st, and delinquent on the 10th.  Payments received after the 10th and checks not honored by the bank are subject to a $25 fee.</p>
+    </div>
   </div>
+</div>
 
