--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -36,6 +36,7 @@ body
       margin-left: 40px
       a
         color: $navy
+        transition: color 0.25s ease
         &:active, &:hover
           color: $offwhite
           text-decoration: none
@@ -89,21 +90,80 @@ body
       a
         color: $offwhite
         opacity: .7
+        transition: opacity 0.25s ease
         &:hover
           text-decoration: none
           opacity: 1
 
 .sections
+  padding-top: 10vw
   max-width: 78%
   margin: 0 auto
+  .container
+    display: flex
+    flex-direction: row
+    .left
+      gap: 1em
+      width: 50%
+    .right
+      gap: 1em
+      width: 50%
+    .front
+      margin-top: -200px
+    .marina-item
+      border: 1px solid rgba(0,0,0,.15)
+      width: 90%
+      margin-bottom: 20px
+      padding: 20px
+      display: flex
+      flex-direction: row
+      align-items: center
+      transition: border 0.3s ease
+      &:hover
+        border: 1px solid rgba(0,0,0,.3)
+        box-shadow: 1px 1px 1px rgba(0,0,0,.25)
+      h4
+        width: 23%
+      .desc
+        width: 52%
+      .price
+        width: 25%
+        text-align: center
+  .accordion
+    input[type="radio"]
+      appearance: none
+      position: fixed
+      top: -100vh
+      left: -100vh
+      & ~ .answer
+        padding-left: 20px
+        max-height: 0
+        overflow: hidden
+        transition: max-height 500ms
+      &:checked ~ div
+        max-height: 1000px
+    h3
+      display: block
+      cursor: pointer
+      color: $navy
+      transition: color 500ms ease
+      &:hover
+        color: $brown
 
 h2
+  padding-top: 50px
+
+h2, h3, h4
   font-family: $montaga
   font-size: 46px
   line-height: 56px
   font-weight: 400
   letter-spacing: -0.03em
   color: $navy
+
+h3, h4
+  font-size: 25px
+  line-height: 38px
 
 footer
   background: $navy
