--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="{{ "/assets/ico/favicon-32.png" | relative_url }}" sizes="32x32">
+  <link rel="icon" href="{{ "/assets/ico/favicon-192.png" | relative_url }}" sizes="192x192">
+  <link rel="icon" href="{{ "/assets/ico/favicon-32.png" | relative_url }}" sizes="32x32">
+  <link rel="apple-touch-icon" href="{{ "/assets/ico/favicon-180.png" | relative_url }}">
+  <meta name="msapplication-TileImage" content="{{ "/assets/ico/favicon-270x270.png" | relative_url }}">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   {%- feed_meta -%}
