--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,7 +11,9 @@
         {{ content }}
 	</div>
 	<div class="right">
-	{%- include slider.html selector='about_slider' -%}
+	  <div class="carousel-wrapper">
+	    {%- include slider.html selector='about_slider' -%}
+	  </div>
 	</div>
       </div>
     </main>
