--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
 
 	{%- include submenu.html -%}
 
-	<div class="sections">
+	<div class="page-content">
           {{ content }}
 	</div>
       </div>
