--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -4,6 +4,8 @@
 @import fonts
 @import colors
 
+$pageWidth: 87%
+
 html
   width: 100%
   margin: 0
@@ -31,7 +33,7 @@ body
     align-items: center
     height: 76px
     margin: 0 auto
-    max-width: 78%
+    max-width: $pageWidth
     .site-nav
       margin-left: 40px
       a
@@ -54,7 +56,7 @@ body
   background: $navy
   height: 330px
   .wrapper
-    max-width: 78%
+    max-width: $pageWidth
     margin: 0 auto
     color: $offwhite
     padding-top: calc(100vw * 0.03)
@@ -73,17 +75,21 @@ body
 .sub-menu
   background: $navy
   position: sticky
-  height: 50px
+  height: 72px
   top: 76px
   z-index: 100
+  margin-bottom: 10vw
   ul
     padding-top: 5px
-    margin-left: 206px
     display: flex
+    margin: 0 auto
+    max-width: $pageWidth
     list-style-type: none
     flex-direction: row
     gap: .75em
     li
+      margin-top: 10px
+      align-items: center
       display: inline-block
       justify-content: flex-start
       padding: 0.25em .5em
@@ -95,14 +101,15 @@ body
           text-decoration: none
           opacity: 1
 
-.sections
-  padding-top: 10vw
-  max-width: 78%
+.page-content
+  max-width: $pageWidth
   margin: 0 auto
 
 .container
   display: flex
   flex-direction: row
+  justify-content: space-between
+  gap: 2em
   .left
     gap: 1em
     width: 50%
@@ -130,6 +137,9 @@ body
     .price
       width: 25%
       text-align: center
+
+.carousel-wrapper
+  margin-top: 10vw
 
 .accordion
   input[type="radio"]
