Footer button added

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
     	<h4 class="footer-heading">{{ site.title | escape }}</h4>
-	<p><a href="https://ebbandember.com" target="_blank">Ebb & Ember Floating Saunas</a></p>
+	<p><a href="https://ebbandember.com" class="button brown" target="_blank">Ebb & Ember Floating Saunas</a></p>
       </div>
 
       <div class="footer-col footer-col-2">
