--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -110,19 +110,19 @@ body
 .container
   display: flex
   flex-direction: row
-  @media screen and (max-width: 600px)
+  @media screen and (max-width: 912px)
     flex-direction: column
   justify-content: space-between
   gap: 2em
   .left
     gap: 1em
     width: 50%
-    @media screen and (max-width: 600px)
+    @media screen and (max-width: 912px)
       width: 100%
   .right
     gap: 1em
     width: 50%
-    @media screen and (max-width: 600px)
+    @media screen and (max-width: 912px)
       width: 100%
   .front
     margin-top: -200px
@@ -133,7 +133,7 @@ body
     padding: 20px
     display: flex
     flex-direction: row
-    @media screen and (max-width: 600px)
+    @media screen and (max-width: 912px)
       flex-direction: column
     align-items: center
     transition: border 0.3s ease
@@ -142,15 +142,15 @@ body
       box-shadow: 1px 1px 1px rgba(0,0,0,.25)
     h4
       width: 23%
-      @media screen and (max-width: 600px)
+      @media screen and (max-width: 912px)
         width: 100%
     .desc
       width: 52%
-      @media screen and (max-width: 600px)
+      @media screen and (max-width: 912px)
         width: 100%
     .price
       width: 25%
-      @media screen and (max-width: 600px)
+      @media screen and (max-width: 912px)
         width: 100%
       text-align: center
 
@@ -179,6 +179,7 @@ body
       color: $brown
 
 h2
+  scroll-margin-top: 100px
   padding-top: 50px
 
 h2, h3, h4
@@ -202,7 +203,7 @@ h3, h4
     padding-top: 2vw
   .footer-col
     width: 30%
-    @media screen and (max-width: 600px)
+    @media screen and (max-width: 912px)
       width: 100%
   a
     color: $offwhite
