--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -3,8 +3,8 @@
     <h3>Boat Slips</h3>
 
     <div class="marina-item">
-      <h4>Side-Tie Slips Inner Side of Docks</h4>
-      <p class="desc">Available monthly and seasonally these protected slips are inside of our docks and suitable for boats up to 25 feet.</p>
+      <h4>Side-Tie Slips, Inner Side of Docks</h4>
+      <p class="desc">Available monthly and seasonally, these protected slips are inside of our docks and suitable for boats up to 25 feet.</p>
       <p class="price">$185/month</p>
     </div>
 
@@ -27,13 +27,13 @@
 
     <div class="marina-item">
       <h4>Floating Homes</h4>
-      <p class="desc">No floating home slips available at this time. Contact local realtors to inquire about floating homes for sale. Short-term rentals are prohibited.</p>
+      <p class="desc">No floating home slips are available at this time. Contact local realtors to inquire about floating homes for sale. Short-term rentals are prohibited.</p>
       <p class="price"></p>
     </div>
 
     <div class="marina-item">
       <h4>Kayaks, Canoes, SUPs</h4>
-      <p class="desc">Why wrestle a kayak when you could store it next to the water. Keep your kayak, canoe, or stand up paddleboard (SUP) on our docks for a quick launch with no hassle.</p>
+      <p class="desc">Why wrestle a kayak when you could store it next to the water? Keep your kayak, canoe, or stand up paddleboard (SUP) on our docks for a quick launch with no hassle.</p>
       <p class="price">$40/month for 1<br>$60/month for 2</p>
     </div>
 
