--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -74,6 +74,8 @@ body
       margin-top: -8px
       padding-bottom: 1.1em
       width: 65.5%
+      @media screen and (max-width: 912px)
+        width: 100%
 
 .sub-menu
   background: $navy
@@ -95,6 +97,8 @@ body
       display: inline-block
       justify-content: flex-start
       padding: 0.25em .5em
+      @media screen and (max-width: 400px)
+        padding: 0.2em
       a
         color: $offwhite
         opacity: .7
@@ -126,6 +130,8 @@ body
       width: 100%
   .front
     margin-top: -200px
+    @media screen and (max-width: 912px)
+      margin-top: -30px
   .marina-item
     border: 1px solid rgba(0,0,0,.15)
     width: 90%
