--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@
 
   <body >
     {%- include header.html -%}
-    <main class="page-content" aria-label="Content">
+    <main class="page-content about-page" aria-label="Content">
       <div class="container">
         <div class="left"> 
         {{ content }}
