--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -244,3 +244,9 @@ h3, h4
   &:focus-visible
     outline: 2px solid $offwhite
     outline-offset: 2px
+
+.about-page
+  .left
+    h2
+      @media screen and (max-width: 912px)
+        font-size: 4vh
