--- a/_includes/submenu.html
+++ b/_includes/submenu.html
@@ -4,6 +4,6 @@
     <li><a href="#marina-rates">Rates</a></li>
     <li><a href="#reserve-a-slip">Reserve</a></li>
     <li><a href="#moorage-faq">FAQ</a></li>
-    <li><a href="/about">About</a></li>
+    <li><a href="#about">About</a></li>
   </ul>
 </div>
