--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,8 @@
       </div>
     </main>
     {% include footer.html %}
+    {%- include slider-styles.html -%}
+    {%- include slider-scripts.html -%}
   </body>
 
 </html>
