One more round of changes

--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,6 +1,6 @@
 <div class="accordion">
   <div>
-    <input id="faq-1" type="radio" name="faq">
+    <input id="faq-1" type="checkbox" name="faq">
     <label for="faq-1">
       <h3>Where is Elevated Tides located?</h3>
     </label>
@@ -16,18 +16,18 @@
   </div>
 
   <div>
-    <input id="faq-2" type="radio" name="faq">
+    <input id="faq-2" type="checkbox" name="faq">
     <label for="faq-2">
       <h3>Do you have a map of the marina?</h3>
     </label>
     <div class="answer">
-      <img src="/assets/img/Elevated-Tides-Moorage-Map-pdf.jpg">
       <p>Moorage tenant and guest parking in “Sailor Lots” only. Vehicles without a parking sticker or pass are subject to towing at the owner’s expense.</p>
+      <img src="/assets/img/Elevated-Tides-Moorage-Map-pdf.jpg">
     </div>
   </div>
 
   <div>
-    <input id="faq-3" type="radio" name="faq">
+    <input id="faq-3" type="checkbox" name="faq">
     <label for="faq-3">
       <h3>What are the available slip sizes?</h3>
     </label>
@@ -37,7 +37,7 @@
   </div>
 
   <div>
-    <input id="faq-4" type="radio" name="faq">
+    <input id="faq-4" type="checkbox" name="faq">
     <label for="faq-4">
       <h3>What types of vessels can you accommodate?</h3>
     </label>
@@ -47,7 +47,7 @@
   </div>
 
   <div>
-    <input id="faq-5" type="radio" name="faq">
+    <input id="faq-5" type="checkbox" name="faq">
     <label for="faq-5">
       <h3>How many floating homes are in the marina?</h3>
     </label>
@@ -57,7 +57,7 @@
   </div>
 
   <div>
-    <input id="faq-6" type="radio" name="faq">
+    <input id="faq-6" type="checkbox" name="faq">
     <label for="faq-6">
       <h3>Does the marina allow live-aboard or overnight tenants?</h3>
     </label>
@@ -67,7 +67,7 @@
   </div>
 
   <div>
-    <input id="faq-7" type="radio" name="faq">
+    <input id="faq-7" type="checkbox" name="faq">
     <label for="faq-7">
       <h3>Do you have payment late fees?</h3>
     </label>
