--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 	  <li><a href="tel:{{ site.phone }}">{{ site.phone }}</a></li>
 	  {%- endif -%}
           {%- if site.email -%}
-	  <li><p>Marina: <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></p></li>
+	  <li><p><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></p></li>
           {%- endif -%}
         </ul>
       </div>
